@@ -1,3 +1,8 @@
+2007-02-06 [colin]	1.93.0cvs10
+
+	* src/vcal_meeting_gtk.c
+		Export to ~ if the path is local but not absolute
+
 2007-02-06 [colin]	1.93.0cvs9
 
 	* src/vcal_folder.c
